add TypScriptConfig Options

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-#development - разработка || production для прода
-NODE_ENV=development
-PORT=3057
+PORT=5173
 BASE_URL=/
+#axios
+VITE_API_URL_PROD=http://localhost:3000
+VITE_API_URL_DEV=http://localhost:3000
